# HoudiniPathTracer

./: .gitignore  README.md  config.env
Binaries/: HoudiniPathTracer.dylib
Compilation/: Build.sh  BuildDebug.sh  config.env
Debug/: debug.hipnc  run.sh
Documentation/: DevelopmentDocumentation.md  UserManual.md
Samples/: MoorningRoom.hipnc  MorningBlinds.hipnc  Room.hipnc  Statue.hipnc
Source/: CMakeLists.txt  Tasks.md
Source/Core/: PathTracer.cpp  PathTracer.hpp  RenderEngine.cpp  RenderEngine.hpp  Renderer.cpp  Renderer.hpp  oldRenderer.cpp  oldRenderer.hpp
Source/Core/BRDF/: LambertBRDF.cpp  LambertBRDF.hpp
Source/Core/Materials/Headers/: BRDF.hpp  BTDF.hpp  BxDF.hpp  Color.hpp  LambertBRDF.hpp  MicrofacetBRDF.hpp  PhongBRDF.hpp  PrincipledShader.hpp  Texture.hpp
Source/Core/Materials/Sources/: BRDF.cpp  LambertBRDF.cpp  Texture.cpp
Source/Core/Materials/Tests/: main.cpp
Source/Core/Materials/include/: BxDF.hpp  Material.hpp  MaterialLibrary.hpp  PB_BxDF.hpp  Texture.hpp
Source/Core/Materials/sources/: BxDF.cpp  Material.cpp  MaterialLibrary.cpp  PB_BxDF.cpp  Texture.cpp
Source/Core/Mathematics/: CMakeLists.txt
Source/Core/Mathematics/Headers/: Coordinates.hpp  Sampling.hpp  Vectors.hpp
Source/Core/Mathematics/Sources/: Coordinates.cpp  Sampling.cpp
Source/Core/Mathematics/debug/: main.cpp
Source/Core/Mathematics/include/: Coordinates.hpp  Geometry.hpp  LinearAlgebra.hpp  Sampling.hpp
Source/Core/Mathematics/source/: Sampling.cpp
Source/Core/Mathematics/sources/: Coordinates.cpp  LinearAlgebra.cpp  Sampling.cpp
Source/Core/PathTracer/: PathTracer.hpp
Source/Core/Physics/Headers/: GeometricalOptics.hpp  OldQuantities.hpp  Quantities.hpp  Radiometry.hpp
Source/Core/Physics/Sources/: GeometricalOptics.cpp  OldQuantities.cpp  Quantities.cpp  Radiometry.cpp
Source/Core/Physics/include/: Optics.hpp  Radiometry.hpp  Units.hpp
Source/Core/Physics/sources/: Optics.cpp  Radiometry.cpp  Units.cpp
Source/Core/RayTracer/: RayTracer.cpp  RayTracer.hpp
Source/Core/Renderers/Headers/: DistributedRaytracer.hpp  ImageRepresentation.hpp  OldDistributedRaytracer.hpp  OldPathTracer.hpp  PathTracer.hpp  PhysicallyBasedRenderer.hpp  Renderer.hpp  Utility.hpp
Source/Core/Renderers/Sources/: DistributedRaytracer.cpp  ImageRepresentation.cpp  OldDistributedRaytracer.cpp  OldPathTracer.cpp  OldRenderer.cpp  PhysicallyBasedRenderer.cpp  Renderer.cpp  Utility.cpp
Source/Core/Renderers/include/: ImageRepresentation.hpp  PhysicallyBasedRenderer.hpp  Renderer.hpp
Source/Core/Renderers/sources/: ImageRepresentation.cpp  PhysicallyBasedRenderer.cpp
Source/Core/Scene/Headers/: Camera.hpp  Geometry.hpp  Light.hpp  OldLight.hpp  Scene.hpp
Source/Core/Scene/Sources/: Camera.cpp  Geometry.cpp  Light.cpp  Scene.cpp
Source/Core/Scene/include/: Camera.hpp  Geometry.hpp  Light.hpp  OldLight.hpp  Scene.hpp
Source/Core/Scene/sources/: Camera.cpp  Geometry.cpp  Light.cpp  Scene.cpp
Source/Core/SceneComponents/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp
Source/Core/Textures/Headers/: Texture.hpp
Source/Core/Utility/: Math.cpp  Math.hpp  Physics.hpp  SampleGenerators.cpp  SampleGenerators.hpp
Source/Core/WhittedRayTracer/: WhittedRayTracer.cpp  WhittedRayTracer.hpp
Source/Hook/Nodes/Headers/: CameraNode.hpp  LightNode.hpp  RendererNode.hpp
Source/Hook/Nodes/Sources/: CameraNode.cpp  DebugNode.cpp  LightNode.cpp  RendererNode.cpp
Source/Hook/Nodes/sources/: CameraNode.cpp  DebugNode.cpp  LightNode.cpp  RendererNode.cpp
Source/Hook/Other/Headers/: RenderWindow.hpp
Source/Hook/Other/Sources/: Hook.cpp  Utility.cpp
Source/Hook/Other/include/: RenderInterface.hpp  RenderWindow.hpp  Utility.hpp
Source/Hook/Other/sources/: Hook.cpp  RenderInterface.cpp  RenderWindow.cpp  Utility.cpp
Source/HoudiniHook/: CameraNode.cpp  DebugNode.cpp  DebugNode.hpp  GeoEditNode.cpp  GeoEditNode.hpp  Hook.cpp  Hook.hpp  LightNode.cpp  PathTracerNode.cpp  PathTracerNode.hpp  RenderView.cpp  RenderView.hpp  RendererNode.cpp  Utility.cpp  Utility.hpp
Source/Interface/: RenderView.cpp  RenderView.hpp  RendererInterface.cpp  RendererInterface.hpp
Source/Interface/Headers/: RenderInterface.hpp  RenderWindow.hpp
Source/Interface/Sources/: RenderInterface.cpp  RenderWindow.cpp
Source/oldCore/: RenderEngine.cpp
Source/oldCore/BRDF/: BXDF.cpp  BXDF.hpp
Source/oldCore/SceneComponents/: Camera.cpp
Source/oldCore/Utility/: Math.cpp  Math.hpp  SampleGenerators.cpp  SampleGenerators.hpp
Source/oldCore/WhittedRayTracer/: WhittedRayTracer.cpp
